# swift

./: .gitignore  README.md  config.example.toml
crates/swift-data/: Cargo.toml
crates/swift-data/migrations/: 001_extensions.sql  002_calendars.sql  003_projects.sql  004_tasks.sql  005_knowledge.sql  006_app_settings.sql  007_project_files.sql
crates/swift-data/seed/: generate-seed.mts  seed.sql
crates/swift-data/src/: error.rs  file.rs  knowledge.rs  lib.rs  migrations.rs  module.rs  project.rs  settings.rs  task.rs
crates/swift-data/tests/: live.rs
docs/: README.md
docs/plan/: swift-agent-v1.md  swift-data-v1.md  swift-knowledge-v1.md  swift-pm-v1.md  swift-scaffold-v1.md  swift-template-feedback-v1.md  swift-v1.md
docs/specs/: ai-assistant.md  data-model.md  database-schema.md  ipc-api.md  knowledge.md  overview.md  projects.md  tasks.md  tracking.md  ui-platform.md
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  data.rs  main.rs  theme.rs  theme_module.rs
ui/: index.html  nest-tailwind-preset.json  package-lock.json  package.json  tailwind.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AboutSwiftDialog.tsx  AppShell.tsx  ConfirmDialog.tsx  DatePicker.tsx  ErrorBoundary.tsx  GanttChartView.tsx  Icon.tsx  ProjectRibbon.tsx  RemoteImage.tsx  Ribbon.tsx  RichTextEditor.tsx  StatusBar.tsx  ToastViewport.tsx
ui/src/components/mock/: AgentPanelMock.tsx  AppSettingsView.tsx  CalendarView.tsx  KnowledgeView.tsx  NewKnowledgeArticleForm.tsx  NewKnowledgeCategoryForm.tsx  NewProjectForm.tsx  NewTaskForm.tsx  ProjectCenterView.tsx  ProjectFilesView.tsx  ProjectInfoView.tsx  TaskDetailsPane.tsx  TimelineStrip.tsx  WorkingTimeView.tsx
ui/src/context/: GanttLayoutContext.tsx  MockFilesContext.tsx  MockKnowledgeContext.tsx  MockProjectContext.tsx  MockSettingsContext.tsx  ProjectViewContext.tsx  StatusBarContext.tsx  ToastContext.tsx
ui/src/hooks/: useHorizontalSplit.ts  useVerticalResize.ts
ui/src/lib/: appInfo.ts  fontawesome.ts  nest.ts  swift.ts  swiftAdapters.ts  tauri.ts
ui/src/mock/: demo.ts  filesDemo.ts  knowledgeDemo.ts  settingsDemo.ts
