[package]
name = "swift"
version = "0.1.0"
description = "Swift — personal PM, knowledge hub, and AI assistant"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nest-cache = { path = "../../../core/crates/nest-cache" }
nest-cache-file = { path = "../../../modules/crates/nest-cache-file" }
nest-core = { path = "../../../core/crates/nest-core" }
nest-design = { path = "../../../core/crates/nest-design" }
nest-image = { path = "../../../core/crates/nest-image" }
nest-tauri = { path = "../../../core/crates/nest-tauri", features = ["runtime", "async", "images"] }
nest-theme = { path = "../../../core/crates/nest-theme" }
tauri = { version = "2", features = [] }

[workspace]
