[package]
name = "swift-data"
version = "0.1.0"
description = "Swift data layer — PostgreSQL repositories on nest-data-postgres"
edition = "2021"
rust-version = "1.75"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
nest-core = { path = "../../../../core/crates/nest-core" }
nest-data = { path = "../../../../core/crates/nest-data", features = ["async"] }
nest-data-postgres = { path = "../../../../modules/crates/nest-data-postgres" }
nest-error = { path = "../../../../core/crates/nest-error" }
pgvector = { version = "0.4", features = ["sqlx"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Standalone workspace root so this crate is not captured by the Nest repo
# workspace and can be built independently of the Tauri shell.
[workspace]
